--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,5 +2,20 @@
     max-width:1200px;
     margin:0 auto;
     padding:20px;
- 
+}
+
+.task-list{
+    margin:10px auto;
+    width:100%;
+}
+
+.card-task{
+    padding:10px;
+}
+
+.data-tasks{
+    width:80%;
+}
+.action-tasks{
+    width:20%;
 }
