feat:create each part of card component

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,1 +1,13 @@
-<p>card works!</p>
+<div>
+    <div>
+        <div>
+            <h2>{{task}}</h2> 
+        </div>
+        <div>
+            {{date}}
+        </div>
+    </div>
+    <div>
+        <p>{{description}}</p>
+    </div>
+</div>
