feat: add action button at card component

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -12,7 +12,13 @@
         <p>{{description}}</p>
     </div>
     <div class="header-content">
-        <p>{{status ? 'Concluida' : 'Não Concluída'}}</p>
+        <div>
+            <p>{{status ? 'Concluida' : 'Não Concluída'}}</p>
+        </div>
+        <div>
+            <button>Editar</button>
+            <button>Excluir</button>
+        </div>
     </div>
    
 </div>
