feat: add angular material icons

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -16,7 +16,7 @@
             <p>{{status ? 'Concluida' : 'Não Concluída'}}</p>
         </div>
         <div>
-            <button>Editar</button>
+            <button><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon></button>
             <button>Excluir</button>
         </div>
     </div>
