--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -4,14 +4,22 @@
     border-radius: 8px;
     color:black;
     padding: 10px;
-    width:60%;
-    margin:15px;
+    width:100%;
+    margin:15px 0;
     box-shadow:1px 1px 1px 1px#888888;
 }
 
 .header-content{
     display: flex;
     margin: 5px 0;
+}
+
+.card-information{
+    display: flex;
+    margin-top: 10px;
+    gap:10px;
+    font-size:12px;
+    font-weight:bold;
 }
 
 .card:hover{
