--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -2,6 +2,8 @@
     background-color: blue;
     color:white;
     height:100px;
+    z-index:99;
+    position: relative;
 }
 .container{
     max-width:1200px;
