--- a/src/app/components/form-task/form-task.component.scss
+++ b/src/app/components/form-task/form-task.component.scss
@@ -6,3 +6,52 @@
 .form-task{
     margin: 10px 0;
 }
+
+.form-fields{
+    margin-bottom:15px;
+}
+
+.input{
+    border-radius: 8px;
+    padding:5px;
+}
+
+.area-text{
+    width:100%;
+    height:150px;
+    resize:none;
+}
+
+.simple-text{
+    width:100%;
+}
+
+.line{
+    display:flex;
+    width:100%;
+    gap:10px;
+}
+
+.form-title{
+    width:100%;
+}
+
+.form-label{
+    font-size:14px;
+    font-weight:bold;
+}
+
+.form-actions{
+    display:flex;
+    gap:10px;
+    justify-content: flex-end;
+    bottom:0;
+    position: relative;
+    margin-top: 15px;
+}
+
+.button-action{
+    padding:10px 20px;
+    border-radius: 8px;
+    cursor:pointer;
+}
