--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-
+<app-loading></app-loading>
 <div class="container">
   <button mat-button class="bt-new-task" (click)="openDialogCreateTask()">Nova tarefa</button>
   @for (item of tasks; track $index) {
