feat: create paginator component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,8 @@
       />
     </a>
   }
+  <mat-divider></mat-divider>
+  <footer>
+    <app-paginator></app-paginator>
+  </footer>
 </div>
-<footer>
-
-</footer>
