--- a/src/app/components/paginator/paginator.component.html
+++ b/src/app/components/paginator/paginator.component.html
@@ -1,7 +1,7 @@
 <div class="paginator_box">
     <p class="item_paginator">
-        <button class="bt-action" (click)="beforeTaskPage()">anterior</button>
-        <span>{{currentPage}}</span>
-        <button class="bt-action" (click)="nextTaskPage()">proxima</button>
+        <button class="bt-action" [disabled]="(currentPage+1) == 1" (click)="beforeTaskPage()">anterior</button>
+        <span>{{currentPage + 1}}</span>
+        <button class="bt-action" [disabled]="(currentPage+1) == totalPages" (click)="nextTaskPage()">proxima</button>
     </p>
 </div>
