--- a/src/app/components/paginator/paginator.component.scss
+++ b/src/app/components/paginator/paginator.component.scss
@@ -1,5 +1,5 @@
 .paginator_box{
-    width:50%;
+    width:25%;
     padding:5px;
     margin: 0 auto;
     margin-top:10px;
@@ -23,4 +23,9 @@
 .bt-action:hover{
     background-color: rgb(44, 44, 223);
     cursor: pointer;
+}
+
+.bt-action:disabled{
+    background-color: rgb(223, 222, 222);
+    color:gray
 }
