--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <app-header></app-header>
 <app-loading></app-loading>
+<button mat-button class="bt-new-task" (click)="applyEditMode()">Editar</button>
+<app-city-multi-select
+  [cities]="['São Paulo', 'Rio de Janeiro', 'Curitiba', 'Porto Alegre', 'Salvador']"
+  [disabled]="isEditMode">
+</app-city-multi-select>
+
 <div class="container">
   <button mat-button class="bt-new-task" (click)="openDialogCreateTask()">Nova tarefa</button>
   @for (item of tasks; track $index) {
