--- a/src/app/components/form-task/form-task.component.html
+++ b/src/app/components/form-task/form-task.component.html
@@ -36,6 +36,10 @@
            ></textarea>
       </div>
       <div class="form-fields">
+        <!--TODO: Create a component to input task subject-->
+        <app-subject-task-input></app-subject-task-input>
+      </div>
+      <div class="form-fields">
         <!--TODO: Create a grid component to visulize all data files-->
       </div>
       <div class="form-fields">
