--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+@use "tailwindcss";
 *{
     margin:0;
     padding:0;
@@ -6,4 +9,6 @@
     font-family: "Poppins";
     
 }
+
+
 
